<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9DF7FF"
    android:orientation="vertical"
    tools:context=".activity.Loginpage">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/bookhub"
        android:contentDescription="logo" />

    <EditText
        android:id="@+id/etphone"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_smartphone_24"
        android:drawablePadding="5dp"
        android:textColor="@color/black"
        android:maxLength="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="9dp"
        />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_lock_person_24"
        android:drawablePadding="5dp"
        android:hint="Password"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:padding="9dp"
        />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#465BD1"
        android:text="LOGIN"
        android:textColor="@color/white"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/tvforgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:clickable="true"/>

    <TextView
        android:id="@+id/tvsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_notice"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:clickable="true"
        android:layout_marginTop="70dp"
        />
</LinearLayout>