<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.DescriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/booktoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/booktoolbar"
        android:layout_marginTop="18dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llViewBook"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@color/white"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/bookPic"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1.3"
                    android:contentDescription="TODO"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">

                    <TextView
                        android:id="@+id/txtBookName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="7dp"
                        android:text="Name of the book"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtAuthorName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtBookName"
                        android:padding="7dp"
                        android:text="Author"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtBookPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtAuthorName"
                        android:padding="7dp"
                        android:text="Rs 299"
                        android:textColor="#038F4B"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txtBookRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:padding="10dp"
                    android:text="4.5"
                    android:textColor="#DAB025"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/baseline_star_24" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llViewBook">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:padding="4dp"
                    android:text="@string/about_my_book"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtBookDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtTitle"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/blank_fragment"
                    android:textColor="@color/black"
                    android:textSize="18sp"

                    />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/progressLayoutBookDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <ProgressBar
            android:id="@+id/bookProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnAddFavourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_to_favourites"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>